# altered-agentic-patterns-lab

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
configs/: example.yaml
examples/: crypto_research.py
src/agentic_patterns_lab/: __init__.py  contracts.py  evaluation.py  guardrails.py  memory.py  patterns.py  recovery.py
tests/: test_memory.py  test_patterns.py
